--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,22 @@ dist.dir=dist
 dist.jar=${dist.dir}/TareaAnalisis2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ext-1.1.1.jar=lib/ext-1.1.1.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jep-2.23.jar=lib/jep-2.23.jar
+file.reference.jep-2.3.1.jar=lib/jep-2.3.1.jar
+file.reference.jep.jar=lib/jep.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ext-1.1.1.jar}:\
+    ${file.reference.jep-2.3.1.jar}:\
+    ${file.reference.jep.jar}:\
+    ${file.reference.jep-2.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
