--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=interfaces.FrmEjercicio1
+main.class=interfaces.FrmMetodoGrafico
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
